@@ -1,5 +1,10 @@
-$NetBSD: distinfo,v 1.8 2010/05/31 16:46:30 manu Exp $
+$NetBSD: distinfo,v 1.9 2011/04/04 08:45:43 manu Exp $
 
-SHA1 (mod_auth_mellon-0.2.7.tar.gz) = ed6b7e74d00bcf32889eff7d647b93e7adb41bd8
-RMD160 (mod_auth_mellon-0.2.7.tar.gz) = 35acee9d78f20388792dae0ec96f7490e36ea685
-Size (mod_auth_mellon-0.2.7.tar.gz) = 90018 bytes
+SHA1 (mod_auth_mellon-0.3.0.tar.gz) = 658dda51652f491552f2ecc84572ed7750f914ff
+RMD160 (mod_auth_mellon-0.3.0.tar.gz) = 69237b1ec266018a86e7134a4662b491af3c261e
+Size (mod_auth_mellon-0.3.0.tar.gz) = 92252 bytes
+SHA1 (patch-ac) = 7976528d9c77b8e30accf60edc958db53ac5e8fb
+SHA1 (patch-ad) = a1bebae20bfbb99bd71d68de19901eaef6c52dbd
+SHA1 (patch-ae) = d51040b6d827940a2c3cf8928dee175efa946e37
+SHA1 (patch-af) = 0803665a14df8582ac20d950a070f73d794b08ea
+SHA1 (patch-ag) = c1ef8704268d99b01d1e96fc2da9be74a7726b9d
